gpg2.1 keytocard removes secret key
Closed, ResolvedPublic

Assigned To
Authored By
gniibe
Feb 18 2015, 1:18 AM
Subscribers

Description

GnuPG 2.1 does not support keeping private keys on host PC when keytocard.

https://lists.gnupg.org/pipermail/gnupg-devel/2015-February/029498.html

Details

Version
2.1

Related Objects

Event Timeline

gniibe added a project: Restricted Project.

It is fixed by the commit: f82c4a6d0d76e716b6a7b22ca964fa2da1f962a0
This is not a perfect solution (it updates key storage by "learn --force" command
of gpg-agent), but it works fine usually.

gniibe removed a project: Restricted Project.